# Metropolis-Core

./: .gitignore  AUTHORS  CHANGELOG.md  CITATION.bib  CITATION.cff  CONTRIBUTING.md  Cargo.toml  Makefile.toml  README.md  SECURITY.md  build.rs  build_web.sh  rustfmt.toml  tauri.conf.json
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
book/: book.toml
book/src/: README.md  SUMMARY.md
book/src/getting_started/: congestion.md  how_trips_are_simulated.md  ttf.md  within_day_model.md
book/src/tools/: routing_script.md
breakpoint_function/: Cargo.toml
breakpoint_function/src/: float.rs  lib.rs  piecewise_linear.rs  step.rs
choice/: Cargo.toml
choice/src/: deterministic_choice.rs  lib.rs  logit.rs  schema.rs
core/: Cargo.toml
core/examples/: csv_example.rs  generate_input.py  parquet_example.rs  unnested_parquet_example.rs
core/examples/data/csv/: agents.csv  alts.csv  parameters.json  trips.csv  vehicles.csv
core/examples/data/parquet/: agents.parquet  alts.parquet  edge_ttfs.parquet  edges.parquet  trips.parquet  vehicles.parquet
core/examples/data/unnested_parquet/: agents.parquet  alts.parquet  edge_ttfs.parquet  edges.parquet  parameters.json  trips.parquet  vehicles.parquet
core/examples/parallel_roads_toll/: agents.csv  alts.csv  edges.csv  parameters.json  trips.csv  vehicles.csv
core/src/: agent.rs  event.rs  learning.rs  lib.rs  logging.rs  parameters.rs  population.rs  progress_bar.rs  report.rs  schema.rs  serialization.rs  travel_utility.rs  units.rs
core/src/io/: arrow.rs  csv.rs  json.rs  mod.rs  parquet.rs  polars.rs
core/src/mode/: mod.rs
core/src/mode/trip/: event.rs  mod.rs  results.rs
core/src/network/: mod.rs
core/src/network/road_network/: mod.rs  parameters.rs  preprocess.rs  skim.rs  state.rs  vehicle.rs  weights.rs
core/src/schedule_utility/: alpha_beta_gamma.rs  mod.rs
core/src/simulation/: mod.rs  results.rs
core/templates/: report.html
core/tests/: bottleneck.rs  gridlock.rs  legs.rs  restricted_roads.rs  spillback.rs
examples/: complete_example.rs  csv_example.rs  generate_input.py  parquet_example.rs  unnested_parquet_example.rs
examples/data/: agents.json  parameters.json  road-network.json  weights.json
examples/data/csv/: edge_ttfs.csv  edges.csv  (+3 more)
examples/minimal_example/: agents.json  parameters.json  roadnetwork.json
gui/: index.html  main.js  styles.css
metropolis-core/: Cargo.toml
metropolis-core/examples/: csv_example.rs  generate_input.py
metropolis-core/examples/data/csv/: agents.csv  edge_ttfs.csv  edges.csv  trips.csv  vehicles.csv
metropolis-core/examples/data/parquet/: agents.parquet  alts.parquet  edge_ttfs.parquet  vehicles.parquet
metropolis-core/src/: event.rs  learning.rs  lib.rs  logging.rs  parameters.rs  population.rs  progress_bar.rs  travel_utility.rs  units.rs
metropolis-core/src/io/: arrow.rs  csv.rs  json.rs  parquet.rs  polars.rs
metropolis-core/src/mode/: mod.rs
metropolis-core/src/mode/trip/: event.rs  mod.rs  results.rs
metropolis-core/src/network/: mod.rs
metropolis-core/src/network/road_network/: mod.rs  preprocess.rs  skim.rs  state.rs  vehicle.rs  weights.rs
metropolis-core/src/schedule_utility/: alpha_beta_gamma.rs  mod.rs
metropolis-core/src/simulation/: mod.rs  results.rs
metropolis-core/templates/: report.html
metropolis-core/tests/: gridlock.rs  legs.rs  restricted_roads.rs  spillback.rs
pwl/: Cargo.toml
pwl/src/: lib.rs  pwl.rs  ttf_num.rs
python/: generate_schemas.py
resources/: resources.gresource.xml  window.ui
schemas/: generate_schemas.py  schema-agent-results.html  schema-agent-results.json  schema-agent-results.md  schema-agents.html  schema-agents.json  schema-agents.md  schema-aggregate-results.html  schema-aggregate-results.json  schema-aggregate-results.md  schema-config.json  schema-iteration.html  schema-iteration.json  schema-iteration.md  schema-output.html  schema-output.json  schema-output.md  schema-parameters.html  schema-parameters.json  schema-parameters.md  schema-roadnetwork.html  schema-roadnetwork.json  schema-roadnetwork.md  schema-skim-results.html  schema-skim-results.json  schema-skim-results.md  schema-weight-results.html  schema-weight-results.json  schema-weight-results.md
simulation/: Cargo.toml
simulation/src/: agent.rs  convergence.rs  event.rs  learning.rs  lib.rs  main.rs  mode_utility.rs  schema.rs  serialization.rs  stop.rs  travel_utility.rs  units.rs
simulation/src/mode/: car.rs  mod.rs  road.rs
simulation/src/network/: mod.rs
simulation/src/network/road_network/: mod.rs  skim.rs  state.rs  vehicle.rs  weights.rs
simulation/src/schedule_utility/: alpha_beta_gamma.rs  mod.rs
simulation/src/simulation/: mod.rs  parameters.rs  preprocess.rs
simulation/templates/: report.html
src/: agent.rs  event.rs  learning.rs  lib.rs  logging.rs  main.rs  parameters.rs  progress_bar.rs  report.rs  schema.rs  serialization.rs  stop.rs  travel_utility.rs  units.rs
src/gui/: imp.rs  mod.rs
src/io/: arrow.rs  csv.rs  json.rs  mod.rs  parquet.rs  polars.rs
src/mode/: fixed_ttf.rs  mod.rs  road.rs
src/network/: mod.rs
src/schedule_utility/: alpha_beta_gamma.rs  mod.rs
src/simulation/: mod.rs  results.rs
tch/: Cargo.toml
tch/examples/: generate_input.py  tch_csv_example.rs  tch_parquet_example.rs
tch/examples/data/csv/: edge_ttfs.csv  edges.csv  parameters.json  queries.csv
tch/examples/data/parquet/: edge_ttfs.parquet  edges.parquet  parameters.json  queries.parquet
tch/src/: algo.rs  bidirectional_ops.rs  bidirectional_search.rs  bound.rs  contraction_hierarchies.rs  hop_limit.rs  lib.rs  main.rs  min_queue.rs  node_data.rs  node_map.rs  ops.rs  preprocessing.rs  query.rs  search.rs  tools.rs
tch/src/io/: arrow.rs  csv.rs  json.rs  mod.rs  parquet.rs
tch/tests/: grid_network.rs  loop.rs
templates/: report.html
tests/: bottleneck.rs  gridlock.rs  legs.rs  restricted_roads.rs  spillback.rs
tests/minimal_example/: simulation.json
ttf/: Cargo.toml
ttf/src/: lib.rs  point.rs  pwl.rs  ttf_num.rs
(+28 files in other folders)
