[package]
name = "metropolis"
version = "1.0.0-5"
authors = ["Lucas Javaudin <lucas@lucasjavaudin.com>"]
edition = "2021"
description = "METROPOLIS2: A mesoscopic transport simulator"
repository = "https://git.lucasjavaudin.com/LucasJavaudin/metrolib"
keywords = [
  "transportation",
  "simulation",
  "traffic-assignment",
  "public-transit",
]
categories = ["science", "simulation"]
publish = false

[workspace]

[dependencies]
tch = { path = "tch/" }
metropolis-core = { path = "core/" }
serde = "1.0"
tauri = { version = "2.0", optional = true }
tauri-plugin-dialog = { version = "2.0", optional = true }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.6"

[build-dependencies]
tauri-build = { version = "2.0", optional = true }

[features]
gui = ["tauri", "tauri-plugin-dialog", "tauri-build"]
custom-protocol = ["gui", "tauri/custom-protocol"]

[profile.dev.package."*"]
debug = false

[profile.release]
opt-level = 3
debug = false
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false
strip = true

[workspace.lints.rust]
elided_lifetimes_in_paths = "warn"
explicit_outlives_requirements = "warn"
macro_use_extern_crate = "warn"
missing_debug_implementations = "warn"
missing_docs = "warn"
non_ascii_idents = "warn"
noop_method_call = "warn"
trivial_numeric_casts = "warn"
trivial_casts = "warn"
unreachable_pub = "warn"
# unused_crate_dependencies = "warn"
unused_extern_crates = "warn"
unused_import_braces = "warn"
unused_lifetimes = "warn"
unused_qualifications = "warn"

[workspace.lints.clippy]
all = "warn"
