[package]
name = "metropolis"
version = "1.1.0"
authors = ["Lucas Javaudin <lucas@lucasjavaudin.com>"]
edition = "2021"
description = "METROPOLIS2: A dynamic agent-based transport simulator"
repository = "https://github.com/Metropolis2/Metropolis-Core"
keywords = [
  "transportation",
  "simulation",
  "traffic-assignment",
  "public-transit",
]
categories = ["science", "simulation"]
publish = false
license = "GPL-3.0-or-later"

[workspace]

[dependencies]
tch = { path = "tch/" }
metropolis-core = { path = "core/" }
serde = "1.0"
tauri = { version = "1.5", features = ["dialog-open"], optional = true }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.6"

[build-dependencies]
tauri-build = { version = "1.5", optional = true }

[features]
gui = ["tauri", "tauri-build"]
custom-protocol = ["gui", "tauri/custom-protocol"]
expire = ["metropolis-core/expire", "tch/expire"]

[profile.dev.package."*"]
debug = false

[profile.release]
opt-level = 3
debug = false
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false
strip = true

[workspace.lints.rust]
elided_lifetimes_in_paths = "warn"
explicit_outlives_requirements = "warn"
macro_use_extern_crate = "warn"
missing_debug_implementations = "warn"
missing_docs = "warn"
non_ascii_idents = "warn"
noop_method_call = "warn"
trivial_numeric_casts = "warn"
trivial_casts = "warn"
unreachable_pub = "warn"
# unused_crate_dependencies = "warn"
unused_extern_crates = "warn"
unused_import_braces = "warn"
unused_lifetimes = "warn"
unused_qualifications = "warn"

[workspace.lints.clippy]
all = "warn"
