[workspace]
resolver = "2"
members = ["tch", "metropolis-core", "pwl", "choice"]

[profile.dev.package."*"]
debug = false

[profile.release]
opt-level = 3
debug = false
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false
strip = true

[workspace.lints.rust]
elided_lifetimes_in_paths = "warn"
explicit_outlives_requirements = "warn"
macro_use_extern_crate = "warn"
missing_debug_implementations = "warn"
missing_docs = "warn"
non_ascii_idents = "warn"
noop_method_call = "warn"
trivial_numeric_casts = "warn"
trivial_casts = "warn"
unreachable_pub = "warn"
# unused_crate_dependencies = "warn"
unused_extern_crates = "warn"
unused_import_braces = "warn"
unused_lifetimes = "warn"
unused_qualifications = "warn"

[workspace.lints.clippy]
all = "warn"
derive_ord_xor_partial_ord = { level = "allow", priority = 1 }
