[package]
name = "choice"
version = "0.1.0"
authors = ["Lucas Javaudin <me@lucasjavaudin.com>"]
edition = "2021"
description = "Discrete and continuous choice models"
repository = "https://git.lucasjavaudin.com/LucasJavaudin/metrolib"
keywords = ["choice", "logit", "discrete-choice"]
categories = ["science", "mathematics"]
publish = false

[dependencies]
ttf = { path = "../ttf" }
anyhow = "1.0"
serde = "1.0"
schemars = "0.8"
