[package]
name = "choice"
version = "0.2.0"
authors = ["Lucas Javaudin <lucas@lucasjavaudin.com>"]
edition = "2021"
description = "Discrete and continuous choice models"
repository = "https://git.lucasjavaudin.com/LucasJavaudin/metrolib"
keywords = ["choice", "logit", "discrete-choice"]
categories = ["science", "mathematics"]
publish = false

[dependencies]
ttf = { path = "../pwl" }
anyhow = "1.0"
serde = "1.0"
schemars = "0.8"
