[package]
name = "choice"
version = "0.2.0"
authors = ["Lucas Javaudin <lucas@lucasjavaudin.com>"]
edition = "2021"
description = "Discrete and continuous choice models"
repository = "https://github.com/Metropolis2/Metropolis-Core"
keywords = ["choice", "logit", "discrete-choice"]
categories = ["science", "mathematics"]
publish = false

[dependencies]
ttf = { path = "../pwl" }
anyhow = "1.0"
either = "1.6"

[lints]
workspace = true
