[package]
name = "metropolis-core"
version = "1.0.0-4"
authors = ["Lucas Javaudin <lucas@lucasjavaudin.com>"]
edition = "2021"
description = "METROPOLIS2: A mesoscopic transport simulator"
repository = "https://git.lucasjavaudin.com/LucasJavaudin/metrolib"
keywords = [
  "transportation",
  "simulation",
  "traffic-assignment",
  "public-transit",
]
categories = ["science", "simulation"]
publish = false

[dependencies]
choice = { path = "../choice/" }
ttf = { path = "../pwl/" }
tch = { path = "../tch/" }
anyhow = "1.0"
arrow = { version = "50.0", default-features = false, features = ["csv"] }
askama = { version = "0.12", features = ["serde-json"], default-features = false }
clap = { version = "4.0", features = ["derive"] }
either = "1.8"
enum-as-inner = "0.6"
hashbrown = { version = "0.14", features = ["rayon"] }
indicatif = "0.17"
itertools = "0.12"
log = "0.4"
num-traits = "0.2"
object-pool = "0.5"
once_cell = "1.17"
parquet = { version = "50.0", features = ["arrow", "json"], default-features = false }
petgraph = { version = "0.6", default-features = false }
polars = { version = "0.38.1", default-features = false, features = ["csv", "parquet"] }
rand = "0.8"
rand_xorshift = "0.3"
rayon = "1.5"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
schemars = { version = "0.8", features = ["preserve_order"] }
simplelog = "0.12"
time = { version = "0.3", features = ["serde-human-readable"] }
zstd = "0.13"

[lints]
workspace = true
