[package]
name = "metropolis-core"
version = "1.1.0"
authors = ["Lucas Javaudin <lucas@lucasjavaudin.com>"]
edition = "2021"
description = "METROPOLIS2: A mesoscopic transport simulator"
repository = "https://git.lucasjavaudin.com/LucasJavaudin/metrolib"
keywords = [
    "transportation",
    "simulation",
    "traffic-assignment",
    "public-transit",
]
categories = ["science", "simulation"]
publish = false

[features]
expire = ["chrono"]

[dependencies]
chrono = { version = "0.4", optional = true }
choice = { path = "../choice/" }
ttf = { path = "../pwl/" }
tch = { path = "../tch/" }
anyhow = "1.0"
arrow = { version = "55.1", default-features = false, features = ["csv"] }
askama = { version = "0.14", default-features = false, features = [
    "derive",
    "std",
] }
clap = { version = "4.0", features = ["derive"] }
either = "1.8"
enum-as-inner = "0.6"
hashbrown = { version = "0.15", features = ["rayon"] }
indicatif = "0.17"
itertools = "0.14"
log = "0.4"
num-traits = "0.2"
object-pool = "0.6"
once_cell = "1.17"
parquet = { version = "55.1", features = ["arrow", "json"] }
petgraph = { version = "0.8", default-features = false }
polars = { version = "0.48.1", default-features = false, features = [
    "csv",
    "parquet",
] }
rand = "0.9"
rand_xorshift = "0.4"
rayon = "1.5"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
simplelog = "0.12"
time = { version = "0.3", features = ["serde-human-readable"] }
zstd = "0.13"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.6"

[lints]
workspace = true
