[package]
name = "ttf"
version = "0.1.1"
authors = ["Lucas Javaudin <lucas@lucasjavaudin.com>"]
edition = "2021"
description = "Piece-wise linear functions"
repository = "https://git.lucasjavaudin.com/LucasJavaudin/metrolib"
keywords = ["travel-time", "piecewise"]
categories = ["science", "mathematics"]
publish = false

[dependencies]
anyhow = "1.0"
either = "1.6"
enum-as-inner = "0.6"
itertools = "0.13"
num-traits = "0.2"
rkyv = { version = "0.8.8", features = ["hashbrown-0_14"] }
serde = "1.0"

[lints]
workspace = true
