[package]
name = "ttf"
version = "0.1.1"
authors = ["Lucas Javaudin <lucas@lucasjavaudin.com>"]
edition = "2021"
description = "Piece-wise linear functions"
repository = "https://github.com/Metropolis2/Metropolis-Core"
keywords = ["travel-time", "piecewise"]
categories = ["science", "mathematics"]
publish = false

[dependencies]
anyhow = "1.0"
either = "1.6"
enum-as-inner = "0.6"
itertools = "0.14"
num-traits = "0.2"
serde = "1.0"

[lints]
workspace = true
