[package]
name = "simulation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
choice = { path = "../choice/", features = ["serde-1"] }
ttf = { path = "../ttf/", features = ["serde-1"] }
tch = { path = "../tch/", features = ["serde-1"] }
anyhow = "1.0"
askama = { version = "0.11", features = ["serde-json"] }
chrono = "0.4"
clap = { version = "3.1", features = ["derive"] }
env_logger = "0.9"
hashbrown = { version = "0.12", features = ["rayon"] }
indicatif = "0.16"
itertools = "0.10"
jemallocator = "0.5"
jemalloc-ctl = "0.5"
log = "0.4"
num-traits = "0.2"
object-pool = "0.5"
petgraph = "0.6"
rand = "0.8"
rand_xorshift = "0.3"
rayon = "1.5"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
schemars = "0.8.7"
validator = "0.16"
