[package]
name = "tch"
version = "0.2.3"
authors = ["Lucas Javaudin <lucas@lucasjavaudin.com>"]
edition = "2021"
description = "Time-dependent contraction hierarchies"
repository = "https://git.lucasjavaudin.com/LucasJavaudin/metrolib"
keywords = [
  "contraction-hierarchies",
  "routing",
  "shortest-path",
  "time-dependent",
  "graph",
]
categories = ["algorithms"]
publish = false

[dependencies]
ttf = { path = "../pwl/" }
anyhow = "1.0"
bincode = "1.3"
clap = { version = "4.0", features = ["derive"] }
csv = "1.1"
either = { version = "1.6", features = ["serde"] }
fixedbitset = "0.4"
geojson = "0.24"
hashbrown = { version = "0.14", features = ["rayon", "serde"] }
indicatif = "0.17"
log = "0.4"
petgraph = { version = "0.6", default-features = false, features = ["serde-1"] }
priority-queue = "2.0"
object-pool = "0.5"
ordered-float = { version = "4.1", features = ["serde"] }
rayon = "1.5"
serde = "1.0"
serde_json = "1.0"
serde_with = { version = "3.0", default-features = false, features = [
  "macros",
] }
schemars = "0.8"
simplelog = "0.12"

[lints]
workspace = true
