[package]
name = "tch"
version = "0.2.3"
authors = ["Lucas Javaudin <lucas@lucasjavaudin.com>"]
edition = "2021"
description = "Time-dependent contraction hierarchies"
repository = "https://git.lucasjavaudin.com/LucasJavaudin/metrolib"
keywords = [
  "contraction-hierarchies",
  "routing",
  "shortest-path",
  "time-dependent",
  "graph",
]
categories = ["algorithms"]
publish = false

[dependencies]
ttf = { path = "../pwl/" }
anyhow = "1.0"
arrow = { version = "53.0", default-features = false, features = ["csv"] }
clap = { version = "4.0", features = ["derive"] }
csv = "1.1"
either = { version = "1.6", features = ["serde"] }
fixedbitset = "0.4"
hashbrown = { version = "0.15", features = ["rayon", "serde"] }
indicatif = "0.17"
log = "0.4"
num-traits = "0.2"
parquet = { version = "53.0", features = ["arrow", "json"] }
petgraph = { version = "0.6", default-features = false, features = ["serde-1"] }
priority-queue = "2.0"
object-pool = "0.6"
ordered-float = { version = "4.1", features = ["serde"] }
rayon = "1.5"
serde = "1.0"
serde_json = "1.0"
serde_with = { version = "3.7", default-features = false, features = [
  "macros",
] }
simplelog = "0.12"
zstd = "0.13"

[lints]
workspace = true
