[package]
name = "tch"
version = "0.2.3"
authors = ["Lucas Javaudin <lucas@lucasjavaudin.com>"]
edition = "2021"
description = "Time-dependent contraction hierarchies"
repository = "https://github.com/Metropolis2/Metropolis-Core"
keywords = [
  "contraction-hierarchies",
  "routing",
  "shortest-path",
  "time-dependent",
  "graph",
]
categories = ["algorithms"]
publish = false

[dependencies]
ttf = { path = "../pwl/" }
anyhow = "1.0"
arrow = { version = "55.1", default-features = false, features = ["csv"] }
chrono = { version = "0.4", optional = true }
clap = { version = "4.0", features = ["derive"] }
csv = "1.1"
either = { version = "1.6", features = ["serde"] }
fixedbitset = "0.5"
hashbrown = { version = "0.16", features = ["rayon", "serde"] }
indicatif = "0.18"
log = "0.4"
num-traits = "0.2"
parquet = { version = "57.0", features = ["arrow", "json"] }
petgraph = { version = "0.8", default-features = false, features = ["serde-1"] }
priority-queue = "2.0"
object-pool = "0.6"
ordered-float = { version = "5.0", default-features = false, features = [
  "serde",
] }
rayon = "1.5"
serde = "1.0"
serde_json = "1.0"
serde_with = { version = "3.7", default-features = false, features = [
  "macros",
] }
simplelog = "0.12"
zstd = "0.13"

[lints]
workspace = true
