[package]
name = "ttf"
version = "0.1.0"
edition = "2021"

[dependencies]
either = "1.6"
num-traits = "0.2"
ordered-float = "2.10"
serde = { version = "1.0", optional = true }
serde_derive = { version = "1.0", optional = true }
schemars = { version = "0.8", optional = true }

[features]
serde-1 = ["serde", "serde_derive", "schemars"]
