[package]
name = "ttf"
version = "0.2.1"
authors = ["Lucas Javaudin <lucas@lucasjavaudin.com>"]
edition = "2021"
description = "Travel-time functions and other utilities"
repository = "https://git.lucasjavaudin.com/LucasJavaudin/metrolib"
keywords = ["travel-time", "piecewise"]
categories = ["science", "mathematics"]
publish = false

[dependencies]
either = "1.6"
itertools = "0.10"
num-traits = "0.2"
serde = "1.0"
schemars = "0.8"
